# okra

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
includes/okra/: config.h  ignore.h  impl.h  re.h  scenario.h  step.h
includes/okra/catch/: framework.h
includes/okra/detail/: find_and_call.h  function_traits.h  implementation.h  invoke.h  typed_registry.h  wstring_convert.h
includes/okra/googletest/: framework.h
samples/: CMakeLists.txt  catch-main.cpp  conanfile.py
samples/inline-scenario/: catch.cpp  gtest.cpp  inline-scenario.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
tests/: CMakeLists.txt  conanfile.py  gtest-main.cpp
tests/unit-tests/: impl.cpp  scenario.cpp  step.cpp
tests/unit-tests/detail/: function_traits.cpp  invoke.cpp  typed_registry.cpp  wstring_convert.cpp
